added file read
