# routes/api_app.php
@@ -17,7 +17,7 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
-
+Route::post('file-read', [\App\Http\Controllers\API\V1\APP\FileController::class, 'read']);
 Route::apiResource('subject', \App\Http\Controllers\API\V1\APP\SubjectController::class)->only(['index','show']);
 Route::get('file-by-subject/{subject_id}', [\App\Http\Controllers\API\V1\APP\FileController::class, 'index']);
 Route::get('file-by-keyword/{keyword}', [\App\Http\Controllers\API\V1\APP\FileController::class, 'show']);
