# storage/api-docs/api-docs.json
@@ -147,6 +147,55 @@
                 }
             }
         },
+        "/api/app/file-read": {
+            "post": {
+                "tags": [
+                    "File"
+                ],
+                "description": "View File",
+                "operationId": "file_read",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "file_id"
+                                ],
+                                "properties": {
+                                    "file_id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/File"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Validation error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/app/subject": {
             "get": {
                 "tags": [
